--- a/8.html
+++ b/8.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="8.html">Home</a></li>
-                <li><a href="#destinations">Destinations</a></li>
+                <li><a href="dsdtinations.html">Destinations</a></li>
                 <li><a href="9.html">Booking</a></li>
                 <li><a href="10.html">Contact</a></li>
             </ul>
@@ -85,7 +85,6 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 MakeMyTrip. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
